--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,2 +1,2 @@
 mathjax : TeX-MML-AM_HTMLorMML-full
-footnote : "williamdemeo@gmail.com"
+footnote : "https://github.com/UniversalAlgebra/term-conditions      williamdemeo@gmail.com"
