--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,2 +1,3 @@
 mathjax : TeX-MML-AM_HTMLorMML-full
-footnote : "https://github.com/UniversalAlgebra/term-conditions &nbsp;&nbsp; &nbsp; &nbsp;   williamdemeo@gmail.com"
+footnote : "https://github.com/UniversalAlgebra/term-conditions   williamdemeo@gmail.com"
+theme-override : css/PITCHME.css
