--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,4 @@
-mathjax : TeX-MML-AM_HTMLorMML-full
-footnote : "https://github.com/UniversalAlgebra/term-conditions   williamdemeo@gmail.com"
-theme-override : css/PITCHME.css
+mathjax: TeX-MML-AM_HTMLorMML-full
+footnote: "https://github.com/UniversalAlgebra/term-conditions   williamdemeo@gmail.com"
+theme-override: css/PITCHME.css
+revealjs: 3.4.1
