--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,4 +1,4 @@
 mathjax: TeX-MML-AM_HTMLorMML-full
-footnote: "https://github.com/UniversalAlgebra/term-conditions   williamdemeo@gmail.com"
+footnote: "EMAIL:  williamdemeo@gmail.com | URL: https://github.com/UniversalAlgebra/term-conditions"
 theme-override: css/PITCHME.css
 revealjs: 3.4.1
