(Sec 5) major revisions
+ finished fixing Algorithms 2, 3, including implementation details
+ TODO: complexity analysis of Algorithms 2 and 3

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 *.out
 *.blg
 *~
+DiffTerm/diffTerm.upa
+DiffTerm/diffTerm.pdf
+DiffTerm/diffTerm.log
+DiffTerm/diffTerm.out
+DiffTerm/diffTerm.bbl
+DiffTerm/diffTerm.fdb_latexmk
+DiffTerm/diffTerm.fls
+DiffTerm/inputs/refs.bib
+
